--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -16,8 +16,8 @@
       <nav class="header-nav">
         <a class="header-nav-logo link" href="./index.html"> <span class="logo-acc">Web</span>Studio</a>
         <ul class="header-list list">
-          <li class="header-list-item"><a class="header-list-link link" href="#studio">Studio</a></li>
-          <li class="header-list-item"><a class="header-list-link link" href="#portfolio">Portfolio</a></li>
+          <li class="header-list-item"><a class="header-list-link link" href="./index.html">Studio</a></li>
+          <li class="header-list-item"><a class="header-list-link link" href="./portfolio.html">Portfolio</a></li>
           <li class="header-list-item"><a class="header-list-link link" href="#contacts">Contacts</a></li>
         </ul>
       </nav>
@@ -42,7 +42,7 @@
 
       <!-- Strategy -->
       <section>
-        <h2 class="strategy">Header2</h2>
+        <h2 class="visually-hidden">No Title</h2>
         <ul class="strategy-list list">
           <li class="strategy-list-item">
             <h3 class="strategy-title">Strategy</h3>
