--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>goit-markup-hw-01</title>
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <title>goit-markup-hw-01</title>
   </head>
   <body>
     <!-- Header -->
     <header>
       <nav class="header-nav">
-        <a class="header-nav-logo link" href="./index.html"> <span class="logo-acc">Web</span>Studio</a>
+        <a class="header-nav-logo link" href="./index.html">Web<span class="logo-acc">Studio</span></a>
         <ul class="header-list list">
           <li class="header-list-item"><a class="header-list-link link" href="./index.html">Studio</a></li>
           <li class="header-list-item"><a class="header-list-link link" href="./portfolio.html">Portfolio</a></li>
