--- a/portfolio.html
+++ b/portfolio.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet">
-    <title>goit-markup-hw-01</title>
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
+    <title>goit-markup-hw-01</title>
   </head>
   <body>
     <!-- Header -->
     <header>
       <nav class="header-nav">
-        <a class="header-nav-logo link" href="./index.html">
-          <span class="logo-acc">Web</span>Studio</a
-        >
+        <a class="header-nav-logo link" href="./index.html">Web<span class="logo-acc">Studio</span></a>
+        
         <ul class="header-list list">
           <li class="header-list-item">
             <a class="header-list-link link" href="./index.html">Studio</a>
@@ -50,7 +47,7 @@
     <main>
       <!-- Cases -->
       <section class="cases">
-        <h2 class="visually-hidden">No Title</h2>
+        <h1 class="visually-hidden">No Title</h1>
         <ul class="cases-list list">
           <li class="cases-item">
             <button type="button" class="cases-btn">All</button>
@@ -72,43 +69,43 @@
             <li>
                 <a><img src="./images/portfolio1.jpg" alt="Banking App Interface Concept">
                 <h3 class=".team-subtitle">Banking App Interface Concept</h3>
-                <p class=".team-text ">App</p></a>
+                <p class=".team-text">App</p></a>
             </li>
             <li>
                 <a><img src="./images/portfolio2.jpg" alt="Cashless Payment">
                 <h3 class=".team-subtitle">Cashless Payment</h3>
-                <p class=".team-text ">Cashless Payment
+                <p class=".team-text">Cashless Payment
                     Marketing</p></a>
             </li>
             <li>
                 <a><img src="./images/portfolio3.jpg" alt="Meditation App">
                 <h3 class=".team-subtitle">Meditation App</h3>
-                <p class=".team-text ">App</p></a>
+                <p class=".team-text">App</p></a>
             </li>
             <li>
                 <a><img src="./images/portfolio4.jpg" alt="Taxi Service">
                 <h3 class=".team-subtitle">Taxi Service</h3>
-                <p class=".team-text ">Marketing</p></a>
+                <p class=".team-text">Marketing</p></a>
             </li>
             <li>
                 <a><img src="./images/portfolio5.jpg" alt="Screen Illustrations">
                 <h3 class=".team-subtitle">Screen Illustrations</h3>
-                <p class=".team-text ">Design</p></a>
+                <p class=".team-text">Design</p></a>
             </li>
             <li>
                 <a><img src="./images/portfolio6.jpg" alt="Online Courses">
                 <h3 class=".team-subtitle">Online Courses</h3>
-                <p class=".team-text ">Marketing</p></a>
+                <p class=".team-text">Marketing</p></a>
             </li>
             <li>
                 <a><img src="./images/portfolio7.jpg" alt="Instagram Stories Concept">
                 <h3 class=".team-subtitle">Instagram Stories Concept</h3>
-                <p class=".team-text ">Design</p></a>
+                <p class=".team-text">Design</p></a>
             </li>
             <li>
                 <a><img src="./images/portfolio8.jpg" alt=">Organic Food">
                 <h3 class=".team-subtitle">Organic Food</h3>
-                <p class=".team-text ">Web Site</p></a>
+                <p class=".team-text">Web Site</p></a>
             </li>
             <li>
                 <a><img src="./images/portfolio9.jpg" alt="Fresh Coffee">
