--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="header-list list">
           <li class="header-list-item"><a class="header-list-link link" href="./index.html">Studio</a></li>
           <li class="header-list-item"><a class="header-list-link link" href="./portfolio.html">Portfolio</a></li>
-          <li class="header-list-item"><a class="header-list-link link" href="#contacts">Contacts</a></li>
+          <li class="header-list-item"><a class="header-list-link link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-address">
