--- a/portfolio.html
+++ b/portfolio.html
@@ -3,29 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>goit-markup-hw-01</title>
   </head>
   <body>
     <!-- Header -->
     <header>
       <nav class="header-nav">
-        <a class="header-nav-logo link" href="./index.html">Web<span class="logo-acc">Studio</span></a>
-        
+        <a class="header-nav-logo link" href="./index.html"
+          >Web<span class="logo-acc">Studio</span></a
+        >
+
         <ul class="header-list list">
           <li class="header-list-item">
             <a class="header-list-link link" href="./index.html">Studio</a>
           </li>
           <li class="header-list-item">
-            <a class="header-list-link link" href="./portfolio.html">Portfolio</a>
+            <a class="header-list-link link" href="./portfolio.html"
+              >Portfolio</a
+            >
           </li>
           <li class="header-list-item">
-            <a class="header-list-link link" href="#contacts">Contacts</a>
+            <a class="header-list-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -54,64 +64,87 @@
           </li>
           <li class="cases-item">
             <button type="button" class="cases-btn">Web Site</button>
-        </li>
+          </li>
           <li class="cases-item">
             <button type="button" class="cases-btn">App</button>
-        </li>
+          </li>
           <li class="cases-item">
             <button type="button" class="cases-btn">Design</button>
-        </li>
+          </li>
           <li class="cases-item">
             <button type="button" class="cases-btn">Marketing</button>
-        </li>
+          </li>
         </ul>
         <ul class="cases-photo list">
-            <li>
-                <a><img src="./images/portfolio1.jpg" alt="Banking App Interface Concept">
-                <h3 class=".team-subtitle">Banking App Interface Concept</h3>
-                <p class=".team-text">App</p></a>
-            </li>
-            <li>
-                <a><img src="./images/portfolio2.jpg" alt="Cashless Payment">
-                <h3 class=".team-subtitle">Cashless Payment</h3>
-                <p class=".team-text">Cashless Payment
-                    Marketing</p></a>
-            </li>
-            <li>
-                <a><img src="./images/portfolio3.jpg" alt="Meditation App">
-                <h3 class=".team-subtitle">Meditation App</h3>
-                <p class=".team-text">App</p></a>
-            </li>
-            <li>
-                <a><img src="./images/portfolio4.jpg" alt="Taxi Service">
-                <h3 class=".team-subtitle">Taxi Service</h3>
-                <p class=".team-text">Marketing</p></a>
-            </li>
-            <li>
-                <a><img src="./images/portfolio5.jpg" alt="Screen Illustrations">
-                <h3 class=".team-subtitle">Screen Illustrations</h3>
-                <p class=".team-text">Design</p></a>
-            </li>
-            <li>
-                <a><img src="./images/portfolio6.jpg" alt="Online Courses">
-                <h3 class=".team-subtitle">Online Courses</h3>
-                <p class=".team-text">Marketing</p></a>
-            </li>
-            <li>
-                <a><img src="./images/portfolio7.jpg" alt="Instagram Stories Concept">
-                <h3 class=".team-subtitle">Instagram Stories Concept</h3>
-                <p class=".team-text">Design</p></a>
-            </li>
-            <li>
-                <a><img src="./images/portfolio8.jpg" alt=">Organic Food">
-                <h3 class=".team-subtitle">Organic Food</h3>
-                <p class=".team-text">Web Site</p></a>
-            </li>
-            <li>
-                <a><img src="./images/portfolio9.jpg" alt="Fresh Coffee">
-                <h3 class=".team-subtitle">Fresh Coffee</h3>
-                <p class=".team-text ">Web Site</p></a>
-            </li>
+          <li>
+            <a class="cases-img link"
+              ><img
+                src="./images/portfolio1.jpg"
+                alt="Banking App Interface Concept"
+              />
+              <h2 class="cases-subtitle ">Banking App Interface Concept</h2>
+              <p class="cases-text">App</p></a
+            >
+          </li>
+          <li>
+            <a class="cases-img link"
+              ><img src="./images/portfolio2.jpg" alt="Cashless Payment" />
+              <h2 class="cases-subtitle ">Cashless Payment</h2>
+              <p class="cases-text">Cashless Payment Marketing</p></a
+            >
+          </li>
+          <li>
+            <a class="cases-img link"
+              ><img src="./images/portfolio3.jpg" alt="Meditation App" />
+              <h2 class="cases-subtitle ">Meditation App</h2>
+              <p class="cases-text">App</p></a
+            >
+          </li>
+          <li>
+            <a class="cases-img link"
+              ><img src="./images/portfolio4.jpg" alt="Taxi Service" />
+              <h2 class="cases-subtitle ">Taxi Service</h2>
+              <p class="cases-text">Marketing</p></a
+            >
+          </li>
+          <li>
+            <a class="cases-img link"
+              ><img src="./images/portfolio5.jpg" alt="Screen Illustrations" />
+              <h2 class="cases-subtitle ">Screen Illustrations</h2>
+              <p class="cases-text">Design</p></a
+            >
+          </li>
+          <li>
+            <a class="cases-img link"
+              ><img src="./images/portfolio6.jpg" alt="Online Courses" />
+              <h2 class="cases-subtitle ">Online Courses</h2>
+              <p class="cases-text">Marketing</p></a
+            >
+          </li>
+          <li>
+            <a class="cases-img link"
+              ><img
+                src="./images/portfolio7.jpg"
+                alt="Instagram Stories Concept"
+              />
+              <h2 class="cases-subtitle ">Instagram Stories Concept</h2>
+              <p class="cases-text">Design</p></a
+            >
+          </li>
+          <li>
+            <a class="cases-img link"
+              ><img src="./images/portfolio8.jpg" alt=">Organic Food" />
+              <h2 class="cases-subtitle ">Organic Food</h2>
+              <p class="cases-text">Web Site</p></a
+            >
+          </li>
+          <li>
+            <a class="cases-img link"
+              ><img src="./images/portfolio9.jpg" alt="Fresh Coffee" />
+              <h2 class="cases-subtitle ">Fresh Coffee</h2>
+              <p class="cases-text">Web Site</p></a
+            >
+          </li>
         </ul>
       </section>
     </main>
