--- a/portfolio.html
+++ b/portfolio.html
@@ -77,8 +77,8 @@
         </ul>
         <ul class="cases-photo list">
           <li>
-            <a class="cases-img link"
-              ><img
+            <a class="link"
+              ><img class="cases-img"
                 src="./images/portfolio1.jpg"
                 alt="Banking App Interface Concept"
               />
@@ -87,43 +87,43 @@
             >
           </li>
           <li>
-            <a class="cases-img link"
-              ><img src="./images/portfolio2.jpg" alt="Cashless Payment" />
+            <a class="link"
+              ><img class="cases-img" src="./images/portfolio2.jpg" alt="Cashless Payment" />
               <h2 class="cases-subtitle ">Cashless Payment</h2>
               <p class="cases-text">Cashless Payment Marketing</p></a
             >
           </li>
           <li>
-            <a class="cases-img link"
-              ><img src="./images/portfolio3.jpg" alt="Meditation App" />
+            <a class="link"
+              ><img class="cases-img" src="./images/portfolio3.jpg" alt="Meditation App" />
               <h2 class="cases-subtitle ">Meditation App</h2>
               <p class="cases-text">App</p></a
             >
           </li>
           <li>
-            <a class="cases-img link"
-              ><img src="./images/portfolio4.jpg" alt="Taxi Service" />
+            <a class="link"
+              ><img class="cases-img" src="./images/portfolio4.jpg" alt="Taxi Service" />
               <h2 class="cases-subtitle ">Taxi Service</h2>
               <p class="cases-text">Marketing</p></a
             >
           </li>
           <li>
-            <a class="cases-img link"
-              ><img src="./images/portfolio5.jpg" alt="Screen Illustrations" />
+            <a class="link"
+              ><img class="cases-img" src="./images/portfolio5.jpg" alt="Screen Illustrations" />
               <h2 class="cases-subtitle ">Screen Illustrations</h2>
               <p class="cases-text">Design</p></a
             >
           </li>
           <li>
-            <a class="cases-img link"
-              ><img src="./images/portfolio6.jpg" alt="Online Courses" />
+            <a class="link"
+              ><img class="cases-img" src="./images/portfolio6.jpg" alt="Online Courses" />
               <h2 class="cases-subtitle ">Online Courses</h2>
               <p class="cases-text">Marketing</p></a
             >
           </li>
           <li>
-            <a class="cases-img link"
-              ><img
+            <a class="link"
+              ><img class="cases-img"
                 src="./images/portfolio7.jpg"
                 alt="Instagram Stories Concept"
               />
@@ -132,15 +132,15 @@
             >
           </li>
           <li>
-            <a class="cases-img link"
-              ><img src="./images/portfolio8.jpg" alt=">Organic Food" />
+            <a class="link"
+              ><img class="cases-img" src="./images/portfolio8.jpg" alt=">Organic Food" />
               <h2 class="cases-subtitle ">Organic Food</h2>
               <p class="cases-text">Web Site</p></a
             >
           </li>
           <li>
-            <a class="cases-img link"
-              ><img src="./images/portfolio9.jpg" alt="Fresh Coffee" />
+            <a class="link"
+              ><img class="cases-img" src="./images/portfolio9.jpg" alt="Fresh Coffee" />
               <h2 class="cases-subtitle ">Fresh Coffee</h2>
               <p class="cases-text">Web Site</p></a
             >
