--- a/portfolio.html
+++ b/portfolio.html
@@ -21,35 +21,20 @@
     <!-- Header -->
     <header>
       <nav class="header-nav">
-        <a class="header-nav-logo link" href="./index.html"
-          >Web<span class="logo-acc">Studio</span></a
-        >
-
+        <a class="header-nav-logo link" href="./index.html">Web<span class="logo-acc">Studio</span></a>
         <ul class="header-list list">
-          <li class="header-list-item">
-            <a class="header-list-link link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-list-item">
-            <a class="header-list-link link" href="./portfolio.html"
-              >Portfolio</a
-            >
-          </li>
-          <li class="header-list-item">
-            <a class="header-list-link link" href="">Contacts</a>
-          </li>
+          <li class="header-list-item"><a class="header-list-link link" href="./index.html">Studio</a></li>
+          <li class="header-list-item"><a class="header-list-link link" href="./portfolio.html">Portfolio</a></li>
+          <li class="header-list-item"><a class="header-list-link link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-address">
         <ul class="header-address-list list">
           <li class="header-address-item">
-            <a class="header-address-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="header-address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="header-address-item">
-            <a class="header-address-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="header-address-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -81,6 +66,7 @@
               ><img class="cases-img"
                 src="./images/portfolio1.jpg"
                 alt="Banking App Interface Concept"
+                width="360"
               />
               <h2 class="cases-subtitle ">Banking App Interface Concept</h2>
               <p class="cases-text">App</p></a
@@ -88,44 +74,44 @@
           </li>
           <li>
             <a class="link"
-              ><img class="cases-img" src="./images/portfolio2.jpg" alt="Cashless Payment" />
+              ><img class="cases-img" src="./images/portfolio2.jpg" alt="Cashless Payment" width="360" />
               <h2 class="cases-subtitle ">Cashless Payment</h2>
-              <p class="cases-text">Cashless Payment Marketing</p></a
+              <p class="cases-text">Marketing</p></a
             >
           </li>
           <li>
             <a class="link"
-              ><img class="cases-img" src="./images/portfolio3.jpg" alt="Meditation App" />
+              ><img class="cases-img" src="./images/portfolio3.jpg" alt="Meditation App" width="360" />
               <h2 class="cases-subtitle ">Meditation App</h2>
               <p class="cases-text">App</p></a
             >
           </li>
           <li>
             <a class="link"
-              ><img class="cases-img" src="./images/portfolio4.jpg" alt="Taxi Service" />
+              ><img class="cases-img" src="./images/portfolio4.jpg" alt="Taxi Service" width="360" />
               <h2 class="cases-subtitle ">Taxi Service</h2>
               <p class="cases-text">Marketing</p></a
             >
           </li>
           <li>
             <a class="link"
-              ><img class="cases-img" src="./images/portfolio5.jpg" alt="Screen Illustrations" />
+              ><img class="cases-img" src="./images/portfolio5.jpg" alt="Screen Illustrations" width="360" />
               <h2 class="cases-subtitle ">Screen Illustrations</h2>
               <p class="cases-text">Design</p></a
             >
           </li>
           <li>
             <a class="link"
-              ><img class="cases-img" src="./images/portfolio6.jpg" alt="Online Courses" />
+              ><img class="cases-img" src="./images/portfolio6.jpg" alt="Online Courses" width="360" />
               <h2 class="cases-subtitle ">Online Courses</h2>
-              <p class="cases-text">Marketing</p></a
-            >
+              <p class="cases-text">Marketing</p></a>
           </li>
           <li>
             <a class="link"
               ><img class="cases-img"
                 src="./images/portfolio7.jpg"
                 alt="Instagram Stories Concept"
+                width="360"
               />
               <h2 class="cases-subtitle ">Instagram Stories Concept</h2>
               <p class="cases-text">Design</p></a
@@ -133,14 +119,14 @@
           </li>
           <li>
             <a class="link"
-              ><img class="cases-img" src="./images/portfolio8.jpg" alt=">Organic Food" />
+              ><img class="cases-img" src="./images/portfolio8.jpg" alt=">Organic Food" width="360" />
               <h2 class="cases-subtitle ">Organic Food</h2>
               <p class="cases-text">Web Site</p></a
             >
           </li>
           <li>
             <a class="link"
-              ><img class="cases-img" src="./images/portfolio9.jpg" alt="Fresh Coffee" />
+              ><img class="cases-img" src="./images/portfolio9.jpg" alt="Fresh Coffee" width="360" />
               <h2 class="cases-subtitle ">Fresh Coffee</h2>
               <p class="cases-text">Web Site</p></a
             >
@@ -151,8 +137,8 @@
     <!-- Footer -->
     <footer class="footer">
       <a class="footer-logo link" href="./index.html"
-        ><span class="footer-logo-acc">Web</span>Studio</a
-      >
+          >Web<span class="footer-logo-acc">Studio</span></a
+        >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
