--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html"><span class="footer-logo-acc">Web</span>Studio</a>
+      <a class="footer-logo link" href="./index.html"
+          >Web<span class="footer-logo-acc">Studio</span></a
+        >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
